--- a/portfolio.html
+++ b/portfolio.html
@@ -234,6 +234,21 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe-footer-soc" >
+                <p class="subscribe-tittle" >Subscribe</p>
+            <form class="subscribe-footer" >
+                   <input class="subscribe-input" 
+                             name="user-email" 
+                             type="email" 
+                             placeholder="Email"
+                             required>
+                   <button class="button-subscribe" type="submit">Subscribe 
+                            <svg class="subscribe-icon "width="24" height="20">
+                                    <use href="./images/symbol-defs-svg.svg#icon-icon-send-1"></use>
+                            </svg>
+                        </button>
+            </form>
+            </div>
         </div>
     </footer>
 
